# SOAKN

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/soakn/KGV1/: .env  ingestion.ipynb
src/soakn/KGV1/cyphers/: setup.cypher
src/soakn/KGV2/: KG.ipynb  config.yaml  docker-compose.yaml  upload.py
src/soakn/KGV2/export/: households.ttl  schema.ttl  transactions_0.ttl  transactions_10000.ttl  transactions_20000.ttl  transactions_30000.ttl  transactions_40000.ttl  transactions_50000.ttl  transactions_60000.ttl  transactions_70000.ttl  transactions_80000.ttl  transactions_90000.ttl
src/soakn/KGV3/: docker-compose.yaml  export.py  ingestion.py  mapping.py  setup.txt
src/soakn/KGV3/export/: retail.ttl
src/soakn/KGV4/: docker-compose.yaml  ingest.py  ingestion.ipynb  ungestion.ipynb
src/soakn/KGV4/export/: retail.ttl
