[project]
name = "soakn"
version = "0.1.0"
description = "Self Organizing Adaptive Knowledge Networks"
authors = [
    {name = "Sebastien Meniere",email = "26484765@sun.ac.za"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j (>=5.28.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "jupyterlab (>=4.4.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "mint (>=0.5,<0.6)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
ipykernel = "^6.29.5"


[tool.poetry]
name = "soakn"
version = "0.1.0"
description = "Self-Organizing Adaptive Knowledge Network"
authors = ["Sebastien Meniere <you@example.com>"]
packages = [{ include = "soakn", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
neo4j = "^5.19"
pandas = "^2.2"
python-dotenv = "^1.0"
jupyterlab = "^4.1"